--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,32 @@
-<title>Joe Mama</title>
-<h1>Joe Mama</h1>
-<b>Deez</b> <i>nuts</i>
+<!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<div class="container">
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <a class="navbar-brand" href="#">Tsoha App</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Frontpage</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Genres</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Songs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">My Info</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="row">
+        <div class="col-8">
+            <title>MusicReview</title>
+            <h1>Test title</h1>
+            <b>Hello</b> <i>world</i>
+        </div>
+    </div>
+</div>
