--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,11 @@
-<!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<div class="container">
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <a class="navbar-brand" href="#">Tsoha App</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Frontpage</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Genres</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Songs</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">My Info</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="row">
-        <div class="col-8">
-            <title>MusicReview</title>
-            <h1>Test title</h1>
-            <b>Hello</b> <i>world</i>
-        </div>
-    </div>
-</div>
+{% extends "layout.html" %}
+<title>MusicReview</title>
+{% block content %}
+<h1>Welcome to MusicReview</h1>
+
+{% if session.user_id %}
+<b>{{ session.user_name }}</b>
+{% else %}
+You're not logged in. <a href="/login">Sign up</a>
+{% endif %}
+{% endblock %}
