registration and login works now

--- a/templates/genres.html
+++ b/templates/genres.html
@@ -1,5 +1,14 @@
 {% extends "layout.html" %}
 {% block title %}Genres{% endblock %}
 {% block content %}
-No genres here
+<h2>Genres</h2>
+{% for entry in data %}
+<table>
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+</table>
+{% endfor %}
 {% endblock %}
