--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
-(% extends "layout.html" %)
-(% block content %)
+{% extends "layout.html" %} 
+{% block content %}
+
 <h2>Login</h2>
+
 <form action="/login" method="post">
     Username: <br><input type="text" name="username">
     <p>
@@ -9,5 +11,4 @@
         <input type="submit" value="Login">
 </form>
 Don't have an account? <a href="/register">Sign up</a>
-<p>
-(% endblock %)
+{% endblock %}
