--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,5 +1,14 @@
 {% extends "layout.html" %}
-{% block title %}Songs{% endblock %}
+{% block title %}Genres{% endblock %}
 {% block content %}
-No songs here
+<h2>Songs</h2>
+{% for entry in data %}
+<table>
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+</table>
+{% endfor %}
 {% endblock %}
