--- a/templates/addgenre.html
+++ b/templates/addgenre.html
@@ -1,3 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
+<h2>Add a new genre</h2>
+
+<form action="/addgenre" method="post">
+    <p>Genre name:<br>
+        <input type="text" name="gname" minlength="1" maxlength="20"></p>
+        <p>Additional description of the genre:<br>
+        <textarea name="gdesc" rows="8" cols="40" maxlength="10000"></textarea></p>
+        <input type="submit" value="Submit">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+</form>
 {% endblock %}
