--- a/templates/song.html
+++ b/templates/song.html
@@ -1,4 +1,4 @@
-{% block title %}{{ gname }}{% endblock %}
+{% extends "layout.html" %}
 {% block content %}
 <h2> {{ sname }} </h2>
 <div class="embed-responsive embed-responsive-21by9">
