--- a/templates/addsong.html
+++ b/templates/addsong.html
@@ -4,14 +4,20 @@
 
 <form action="/addsong" method="post">
     <p>Song name:<br>
-        <input type="text" name="sname" minlength="1" maxlength="20"></p>
-        <p>Hyperlink to the song:<br>
+        <input type="text" name="sname" minlength="1" maxlength="20">
+    </p>
+    <p>Hyperlink to the song:<br>
         <input type="text" name="hyperlink"><br>
-        <p>Additional information about the song:<br>
-        <textarea name="sdesc" rows="8" cols="40" maxlength="10000"></textarea></p>
-        <input type="submit" value="Submit">
-        <input type="hidden" name="genre_id" value="{{ genre_id }}">
-        <input type="hidden" name="gname" value="{{ gname }}">
-        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+    <p>Additional information about the song:<br>
+        <textarea name="sdesc" rows="8" cols="40" maxlength="10000"></textarea>
+    </p>
+    <label for="gname">Choose the genre:</label>
+    <select name="gname" id="gname">
+        {% for genre in genredata %}
+        <option value="{{ genre.gname }}">{{ genre.gname }}</option>
+        {% endfor %}
+    </select><br>
+    <input type="submit" value="Submit">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 {% endblock %}
