updated schema, made adding songs possible and viewing youtube videos of them in embedded mode, so frontend and backend

--- a/templates/genre.html
+++ b/templates/genre.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <h2> {{ gname }} </h2>
+<h3>Genre description:</h3>
 {{ gdesc }}
 <p>
 <a href="/addsong">Add a song to the genre</a>
