--- a/templates/song.html
+++ b/templates/song.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2> {{ sname }} </h2>
+<h2>Song: {{ sname }} </h2>
+<h2>Genre: {{ gname }}</h2>
 <div class="embed-responsive embed-responsive-21by9">
-    <iframe class="embed-responsive-item" src="{{hyperlink}}"></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ hyperlink }}"></iframe>
 </div>
-
+<h2>Song Description:</h2>
+{{ sdesc }}
 {% if reviews %}
 <h3>Reviews</h3>
 {% endif %}
@@ -28,7 +30,7 @@
         Review:<br>
         <textarea name="comment" rows="3" cols="40" maxlength="1000"></textarea>
     <p><input type="submit" value="Send">
-        <input type="hidden" name="song_id" value="{{ id }}">
+        <input type="hidden" name="sid" value="{{ sid }}">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 {% endif %}
