added artists, a join table, support for embedded soundcloud, scrape for sc track id, conditions for html rendering

--- a/templates/genre.html
+++ b/templates/genre.html
@@ -7,7 +7,7 @@
 <a href="/addsong">Add a song to the genre</a>
 <ul>
     {% for song in songli %}
-    <li><a href="/song/{{ song.id }}">{{ song.name }}</a>
+    <li><a href="/song/{{ song.id }}">{{ song.sname }}</a>
     {% endfor %}
     </ul>
 
