--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,9 @@
                 <a class="nav-link" href="/genres">Genres</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/artists">Artists</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/songs">Songs</a>
             </li>
             <li class="nav-item">
