--- a/templates/song.html
+++ b/templates/song.html
@@ -2,9 +2,17 @@
 {% block content %}
 <h2>Song: {{ sname }} </h2>
 <h2>Genre: {{ gname }}</h2>
+{% if condition == "youtube" %}
 <div class="embed-responsive embed-responsive-21by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ hyperlink }}"></iframe>
 </div>
+{% elif condition == "soundcloud" %}
+<div class="embed-responsive embed-responsive-21by9">
+    #<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ hyperlink }}&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+</div>
+  {% else %}
+  Hyperlink: <a href="{{ hyperlink }}"></a>
+{% endif %}
 <h2>Song Description:</h2>
 {{ sdesc }}
 {% if reviews %}
