added adding artists and worked on myinfo

--- a/templates/addsong.html
+++ b/templates/addsong.html
@@ -3,6 +3,9 @@
 <h2>Add a new song</h2>
 
 <form action="/addsong" method="post">
+    <p>Artist name:<br>
+        <input type="text" name="aname" minlength="1" maxlength="200">
+    </p>
     <p>Song name:<br>
         <input type="text" name="sname" minlength="1" maxlength="200">
     </p>
