--- a/templates/artists.html
+++ b/templates/artists.html
@@ -7,4 +7,5 @@
     <li><a href="/artist/{{ artist.id }}">{{ artist.aname }}</a>
     {% endfor %}
     </ul>
+    <a href="/addartist">Add an artist</a>
 {% endblock %}
