--- a/templates/genres.html
+++ b/templates/genres.html
@@ -7,4 +7,5 @@
     <li><a href="/genre/{{ genre.genre_url }}">{{ genre.gname }}</a>
     {% endfor %}
     </ul>
+    <a href="/addgenre">Add a genre</a>
 {% endblock %}
