edited error.html, possible fix in song listing in genre.html and DROP TABLEs to schema.sql

--- a/templates/genre.html
+++ b/templates/genre.html
@@ -5,7 +5,7 @@
 {{ gdesc }}
 <p>
 <ul>
-    {% for song in songli %}
+    {% for song in songlist %}
     <li><a href="/song/{{ song.id }}">{{ song.sname }}</a>
         {% endfor %}
 </ul>
