edited readme, added listing of artists and songs to artist and genre pages

--- a/templates/artist.html
+++ b/templates/artist.html
@@ -11,6 +11,7 @@
     </thead>
 
     <body>
+        <h4>Songs:</h4>
         {% for song in songli %}
         <tr>
             <td><a href="/song/{{ song.id }}">{{ song.sname }}</a></td>
